--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,8 +1,9 @@
+
 <%= form_with(model: message, id: 'message-form') do |form| %>
-  <%= form.text_field :content %>
+  <%= form.text_field :content, :autocomplete => 'off' %>
   <%= form.hidden_field :room_id %>
   
   <div>
-  <%= form.submit %>
+  <%= form.submit "Send" %>
   </div>
 <% end %>
