--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
 <div id="<%= dom_id message %>" class="message">
 <%= message.content %>
-<%= button_to 'Delete', message, method: :delete, data: {confirm: 'Are you sure?' } %>
+<%= button_to 'Delete', message, method: :delete, data: { turbo_confirm: 'Are you sure?' } %>
 </div>
