--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -8,4 +8,5 @@
     <%= render partial: 'messages/form', locals: {message:Message.new(room: @room)} %>
     <%= turbo_stream_from @room %>
     <% end %>
+    <%= button_to "Clear message", delete_all_messages_room_path(@room), method: :delete, data: { confirm: 'Are you sure you want to delete all messages?' } %>
 </div>
