--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,13 +1,21 @@
 <div id='chatapp'>
     <div id='rooms'>
+        <p>
+            Welcome <%= Current.user.email_address %>!
+        </p>
+        
         <%= turbo_frame_tag 'room' do %>
+        <br>
         <div id='room-list'>
             <% @rooms.each do |room| %>
             <%= render room %>
             <% end %>
         </div>
+        <br>
         <%= render partial: 'form', locals: {room: Room.new(name:"Room #{Room.count + 1}")} %>
         <% end %>
+        <br>
+        <%= button_to "Logout", session_path, method: :delete, data: { confirm: 'Are you sure?' } %>
     </div>
 
     <div id='messages'>
@@ -17,8 +25,9 @@
             <%= render message %>
             <% end %>
         </div>
-            <%= render partial: 'messages/form', locals: {message:Message.new(room: @room)} %>
-            <%= turbo_stream_from @room %>
-            <% end %>
+        <%= render partial: 'messages/form', locals: {message:Message.new(room: @room)} %>
+        <%= turbo_stream_from @room %>
+        <% end %>
+        <%= button_to "Clear message", delete_all_messages_room_path(@room), method: :delete, data: { confirm: 'Are you sure you want to delete all messages?' } %>
     </div>
 </div>
