--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,5 @@
-<div id="<%= dom_id message %>" class="message">
-<%= message.content %>
-<%= button_to 'Delete', message, method: :delete, data: { turbo_confirm: 'Are you sure?' } %>
+
+<div class="message" id="<%= dom_id(message) %>">
+  <strong><%= message.user.email_address %>:</strong> <%= message.content %>
+  <%= button_to 'Delete', message, method: :delete, data: { turbo_confirm: 'Are you sure?' } %>
 </div>
