--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -7,6 +7,9 @@
     <% end %>
   </strong> 
   <%= message.content %>
+  <span style="font-weight: light; color: #F6F5F2; font-size: 10px">
+    <%= message.created_at.in_time_zone("Asia/Bangkok").strftime("%H:%M") %>
+  </span>
   <%= button_to 'Delete', message, method: :delete, data: { turbo_confirm: 'Are you sure?' }, class: 'button' %>
 </div>
 
