--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -20,14 +20,16 @@
 
     <div id='messages'>
             <%= turbo_frame_tag 'room-messages' do %>
-                <h1 style="text-align: center"> <%= @room.name %> </h1>
-                <div id='message-list'>
-                    <% @messages.each do |message| %>
-                        <%= render message %>
-                    <% end %>
-                </div>
-                <%= render partial: 'messages/form', locals: {message:Message.new(room: @room)} %>
-                <%= turbo_stream_from @room %>
+                <% if @room.present? %>
+                        <h1 style="text-align: center"> <%= @room.name %> </h1>
+                    <div id='message-list'>
+                        <% @messages.each do |message| %>
+                            <%= render message %>
+                        <% end %>
+                    </div>
+                    <%= render partial: 'messages/form', locals: {message:Message.new(room: @room)} %>
+                    <%= turbo_stream_from @room %>
+                <% end %>
         <% end %>
     </div>
 </div>
